# FP_Assignment_2

./: .gitignore  LICENSE  README.md  assignment2.cabal  stack.yaml
src/: Main.hs
src/Data/: Config.hs  Desert.hs  Persistency.hs  Play.hs  Player.hs  Worm.hs
src/Data/Internal/: Direction.hs  List2D.hs  Nat.hs  ZipperGrid.hs
src/Data/Internal/List2D/BFS/: Lazy.hs  Strict.hs
src/Graphics/: GameGUI.hs  GlossyDesert.hs
