name:                assignment2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Acaccia/assignment2#readme
license:             BSD3
license-file:        LICENSE
author:              Anthony Caccia
maintainer:          acaccia@ulb.ac.be
copyright:           ACaccia
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable assignment2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -rtsopts -threaded -O2 -with-rtsopts=-N
  other-modules:       Data.Desert
                     , Data.Internal.Direction
                     , Data.Internal.List2D.BFS.Lazy
                     , Data.Internal.List2D.BFS.Strict
                     , Data.Play
                     , Data.Config
                     , Data.Internal.List2D
                     , Data.Internal.Nat
                     , Data.Player
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , random
                     , containers
                     , unordered-containers
                     , lens
                     , parallel
                     , parsec
                     , stm
